[package]
name = "prefix_id"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library for generating unique IDs nano ids with a prefix."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "prefix_id"
path = "src/lib.rs"

[dependencies]
nanoid = "0.4"
smol_str = "0.2"
thiserror = "1.0.61"
serde = { version = "1.0", features = ["derive"], optional = true}

[dev_dependencies]
serde_json = "1.0"

[features]
default = []
serde = ["dep:serde"]
