[package]
name = "prefix_id"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
description = "A library for generating unique IDs nano ids with a prefix."
repository = "https://github.com/DevSlashRichie/prefix_id"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "prefix_id"
path = "src/lib.rs"

[dependencies]
nanoid = "0.4"
smol_str = "0.2"
thiserror = "1.0.61"
serde = { version = "^1.0", features = ["derive"], optional = true }
diesel = { version = "^2.2", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
serde = ["dep:serde"]
diesel = ["dep:diesel"]
